--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
