--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest-watch-typeahead": "^0.6.5",
     "postcss": "^8.4.5",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
